add clear table

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <section class="title">
         <button type="button" class="btn btn-primary" onclick="LocalStorageValidation()">Read Users</button>
+        <button type="button" class="btn btn-primary" onclick="clearDom()" style="display: none;" id="btn-clear">Clear Table</button>
     </section>
     <table class="table">
       <h1 id="advise"></h1>
